Outline through originality

--- a/outline.tex
+++ b/outline.tex
@@ -26,6 +26,15 @@
 \newpage
 \input{sections/overview.tex}
 \newpage
+\input{sections/fundamentals.tex}
+\newpage
+\input{sections/tailoring-copyright.tex}
+\newpage
+\input{sections/ownership-formalities-transfers.tex}
+\newpage
+\input{sections/exclusive-rights.tex}
+\newpage
+\input{sections/supplementary-protections.tex}
 
 % TODO move to separate file once i have the syllabus:
 
